--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,25 @@ difftimeWorkNew/*.local
 difftimeWorkNew/__astcache/
 difftimeWorkNew/__history/
 difftimeWorkNew/__recovery/
+kontrolTask/Win32/
+kontrolTask/*.local
+kontrolTask/__astcache/
+kontrolTask/__history/
+kontrolTask/__recovery/
+kontrolTask/Win32/Debug/*.#00
+kontrolTask/Win32/Debug/*.#01
+kontrolTask/Win32/Debug/*.#02
+kontrolTask/Win32/Debug/*.map
+kontrolTask/Win32/Debug/*.tds
+kontrolTask/Win32/Debug/*.obj
+kontrolTask/Win32/Release/*.#00
+kontrolTask/Win32/Release/*.#01
+kontrolTask/Win32/Release/*.#02
+kontrolTask/Win32/Release/*.map
+kontrolTask/Win32/Release/*.tds
+kontrolTask/Win32/Release/*.obj
+kontrolTask/Win32/Release/*.ilc
+kontrolTask/Win32/Release/*.ild
+kontrolTask/Win32/Release/*.ilf
+kontrolTask/Win32/Release/*.ils
+kontrolTask/Win32/Release/*.pch
